# Tuckr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup.py
.github/workflows/: deploy.yml  mdbook.yml  unit-test.yml
app/: app.py  dotfilehandler.py  symlinkhandler.py
book/: book.toml
book/src/: SUMMARY.md  faq.md  what-is-tuckr.md
book/src/commands/: dotfile.md  glob-and-exclude.md  hook.md
book/src/fundamentals/: how-tuckr-works.md  profiles.md  what-is-tuckr.md
book/src/path-finding/: debug.md  dotfiles.md  env.md  root.md
locales/: en.toml  es-ES.toml  pt-PT.toml
pkg/: PKGBUILD
src/: dotfiles.rs  fileops.rs  filetree  filetree.rs  go.mod  hooks.rs  main.go  main.rs  secrets.rs  setup.go  symlink.rs  symlinks.rs  test.txt  utils.rs  vimrcbkp
src/manage/: symlink.go
src/setup/: setup.go
test/: conf.yml  pip.txt  script1.sh  script2.sh  tuckr.conf
