[package]
name = "tuckr"
version = "0.8.1"
authors = ["RaphGL"]
edition = "2021"
description = "Super powered GNU Stow replacement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
owo-colors = "3"
rand = "0.8"
rpassword = "7.2"
sha2 = "0.10"
tabled = {version = "0.10", features = ["color"]}
walkdir = "2.3"
zeroize = "1.5"
