[package]
name = "tuckr"
version = "0.11.1"
authors = ["RaphGL"]
edition = "2024"
description = "Super powered GNU Stow replacement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
enumflags2 = "0.7.10"
owo-colors = "4"
rand = "0.8"
rpassword = "7.3"
rust-i18n = "3.1"
sha2 = "0.10"
sys-locale = "0.3.2"
tabled = {version = "0.18", features = ["ansi"]}
zeroize = "1.8"
