[package]
name = "tuckr"
version = "0.12.0"
authors = ["RaphGL"]
edition = "2024"
description = "Super powered GNU Stow replacement"
license = "GPL-3.0"
homepage = "https://github.com/RaphGL/Tuckr"
repository = "https://github.com/RaphGL/Tuckr"
keywords = ["dotfiles", "dotfile-manager", "stow"]
categories = ["command-line-utilities", "config"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
enumflags2 = "0.7"
owo-colors = "4"
rpassword = "7.3"
rust-i18n = "3.1"
sha2 = "0.10"
sys-locale = "0.3.2"
tabled = {version = "0.20", features = ["ansi"]}
zeroize = "1.8"

# it's already a transitive dependency by clap
# so we might as well use it too
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
